Day1/7 서울/src/eks/manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unicorn-ing
  namespace: unicorn
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: unicorn-alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/security-groups: SECURITY_GROUP_ID
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/conditions.app-post: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["POST"]}}]
    alb.ingress.kubernetes.io/actions.app-post: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"unicorn-book-app-svc","servicePort":8080,"weight":100}]}}
    alb.ingress.kubernetes.io/conditions.app-get: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["GET"]}}]
    alb.ingress.kubernetes.io/actions.app-get: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"unicorn-book-app-svc","servicePort":8080,"weight":100}]}}
    alb.ingress.kubernetes.io/actions.response-404: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"Contents Not Found"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/book
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-post
            port:
              name: use-annotation
      - path: /health
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-get
            port:
              name: use-annotation
  defaultBackend:
      service:
        name: response-404
        port:
          name: use-annotation
